examples/test/testpolicy2709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2709
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key32: value16
      key20: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value39
          key22: value9
          key12: value25
      podSelector:
        matchLabels:
          key26: value12
